# pychadwick

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  pythonpackage.yml
pychadwick/: __init__.py  book.py  box.py  chadwick.py  experiments.py  game.py  gameiter.py  league.py  parse.py  pych.py  pychadwick.py  roster.py  utils.py
pychadwick/cli/: pycwevent.py
pychadwick/libutils/: __init__.py  cwlib.py
pychadwicklib/: setup.py
pychadwicklib/src/cwlib/: league.c
pychadwicklib/src/cwtools/: cwevent.c  cwtools.c
scripts/: c_chadwick_regression_test.py  mark_updated_source.py  pych.py  run_cwevent.sh
src/: Makefile
src/cwlib/: league.c
src/pychadwicklib/: Makefile
src/pychadwicklib/cwlib/: book.c  book.h  box.c  box.h  chadwick.h  file.c  file.h  game.c  game.h  gameiter.c  gameiter.h  league.c  league.h  lint.c  parse.c  parse.h  roster.c  roster.h
src/pychadwicklib/cwtools/: cwbox.c  cwboxsml.c  cwboxxml.c  cwcomment.c  cwdaily.c  cwevent.c  cwgame.c  cwsub.c  cwtools.c  xmlwrite.c  xmlwrite.h
tests/pychadwick/: test_pychadwick.py
tests/pychadwick/chadwick/: test_pychadwick.py
